test/libyul/yulSyntaxTests/if_statement_invalid_4.yul
{
    if calldatasize {}
}
// ----
// DeclarationError 8198: (9-21): Identifier not found.
// TypeError 1733: (9-21): Expected a value of boolean type "bool" but got "u256"
